// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should rendering and clickable input 1`] = `
<div>
  <div
    class="css-158voh1-CountBullButtons"
  >
    <div
      class="css-8vdy66-CountBullButtons"
    />
    <button
      aria-label="outer bull"
      class="css-c7v446-CountBullButtons"
    />
    <button
      aria-label="inner bull"
      class="css-1kw2i65-CountBullButtons"
    />
    <button
      aria-label="non bull"
      class="css-1cn4f4l-CountBullButtons"
    />
    <div
      class="css-6n8pms-CountBullButtons"
    />
  </div>
</div>
`;

exports[`should rendering and disable input 1`] = `
<div>
  <div
    class="css-158voh1-CountBullButtons"
  >
    <div
      class="css-1fesa4f-CountBullButtons"
    />
    <button
      aria-label="outer bull"
      class="css-c7v446-CountBullButtons"
      disabled=""
    />
    <button
      aria-label="inner bull"
      class="css-1kw2i65-CountBullButtons"
      disabled=""
    />
    <button
      aria-label="non bull"
      class="css-1cn4f4l-CountBullButtons"
      disabled=""
    />
    <div
      class="css-6n8pms-CountBullButtons"
    />
  </div>
</div>
`;
